# handler/auth.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"fmt"
 	"net/http"
 	"strconv"
 
@@ -49,11 +50,12 @@ func IdentityHandler(c *gin.Context) interface{} {
 // @Product application/json
 // @Param account body server.Login  true "account"
 // @Success 200 {string} string "{"code": 200, "expire": "2019-08-07T12:45:48+08:00", "token": ".eyJleHAiOjE1NjUxNTMxNDgsImlkIjoiYWRtaW4iLCJvcmlnX2lhdCI6MTU2NTE0OTU0OH0.-zvzHvbg0A" }"
-// @Router /api/v1/login [post]
+// @Router /v1/login [post]
 func Authenticator(c *gin.Context) (interface{}, error) {
 	var loginVals server.Login
 
-	if err := c.ShouldBind(&loginVals); err != nil {
+	if err := c.ShouldBindJSON(&loginVals); err != nil {
+		fmt.Println(err.Error())
 		return nil, jwt.ErrMissingLoginValues
 	}
 	if config.OSConfig.Application.Mode != "dev" {
@@ -79,9 +81,9 @@ func Authenticator(c *gin.Context) (interface{}, error) {
 // @Accept  application/json
 // @Product application/json
 // @Success 200 {string} string "{"code": 200, "msg": "成功退出系统" }"
-// @Router /api/v1/logout [post]
+// @Router /v1/logout [post]
 // @Security Bearer
-func LogOut(c *gin.Context) {
+func Logout(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{
 		"code": 200,
 		"msg":  "退出成功",
@@ -90,15 +92,10 @@ func LogOut(c *gin.Context) {
 }
 
 func Authorizator(data interface{}, c *gin.Context) bool {
-
 	if v, ok := data.(map[string]interface{}); ok {
-		u, _ := v["user"].(models.SysUser)
-		r, _ := v["role"].(models.SysRole)
-		c.Set("role", r.RoleName)
-		c.Set("roleIds", r.ID)
-		c.Set("userId", u.ID)
-		c.Set("nickname", u.NickName)
-
+		c.Set("roleId", v["RoleIds"])
+		c.Set("userId", v["IdentityKey"])
+		c.Set("nickname", v["NickName"])
 		return true
 	}
 	return false
